# python3-ug-cs

./: README.md  build.sh  install.sh  pyproject.toml  upload.sh  usage.py
src/python3-ug-cs/dsa/: Algos.py  BST.py  DLL.py  DeciB.py  G.py  MedL.py  SLL.py  SwapT.py  __init__.py
src/python3-ug-cs/ml/: Classify.py  MTL.py  Regr.py
src/python3-ug-cs/rl/: MDP.py
src/python3ugcs/: __init__.py
src/python3ugcs/dsa/: BalT.py  DLL.py  HuffT.py  Q.py  SLL.py  SuffT.py
src/python3ugcs/ml/: Algos.py  Cluster.py  Embed.py  Kernels.py  Network.py  QueryModel.py  __init__.py
src/python3ugcs/rl/: Bandits.py  __init__.py
