[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'python3ugcs'
version = '1.0.2'
authors = [
    {name = 'Sarthak Mittal', email = 'sarthakmittal0902@gmail.com'}
]
description = 'Python library for DSA, ML and RL in UG CS'
readme = 'README.md'
requires-python = '>=3.8'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent'
]

[project.urls]
'Homepage' = 'https://github.com/sarthakmittal92/python3-ug-cs'
'Bug Tracker' = 'https://github.com/sarthakmittal92/python3-ug-cs/issues'